--- a/text-editor.html
+++ b/text-editor.html
@@ -12,7 +12,10 @@
     <div id = "text-editor">
         <textarea spellcheck = "false" id = "textarea"></textarea>
         <div id = "download-file">
-            <button>Download Now!</button>
+            <h2 id = "saved">All changes saved!</h2>
+            <button id = "download-button">Download Now!</button>
+            <h2 id = "saving" class = "hidden">Changes are being saved!</h2>
+            <div id = "loader" class = "hidden"></div>
         </div>
     </div>
 
