added language options and started the downloading process

--- a/text-editor.html
+++ b/text-editor.html
@@ -16,6 +16,38 @@
             <button id = "download-button">Download Now!</button>
             <h2 id = "saving" class = "hidden">Changes are being saved!</h2>
             <div id = "loader" class = "hidden"></div>
+            <div id="download-path">
+                <form>
+                    <div class="column">
+                        <div>
+                            <input type="radio" id="javascript" name="language" value="javascript">
+                            <label for="javascript">Javascript</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="typescript" name="language" value="typescript">
+                            <label for="typescript">Typescript</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="python" name="language" value="python">
+                            <label for="python">Python</label>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div>
+                            <input type="radio" id="java" name="language" value="java">
+                            <label for="java">Java</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="c" name="language" value="c">
+                            <label for="c">C</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="c++" name="language" value="c++">
+                            <label for="c++">C++</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
