finished text editor

--- a/text-editor.html
+++ b/text-editor.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- If it works, don't touch it 😂-->
+    <!-- SO MANY ID's ffs -->
     <div id = "text-editor">
         <textarea spellcheck = "false" id = "textarea"></textarea>
         <div id = "download-file">
@@ -16,34 +18,34 @@
             <button id = "download-button">Download Now!</button>
             <h2 id = "saving" class = "hidden">Changes are being saved!</h2>
             <div id = "loader" class = "hidden"></div>
-            <div id="download-path">
+            <div id = "download-path">
                 <form>
-                    <div class="column">
+                    <div class = "column">
                         <div>
-                            <input type="radio" id="javascript" name="language" value="javascript">
+                            <input type = "radio" id = "javascript" name = "language" value = "javascript">
                             <label for="javascript">Javascript</label>
                         </div>
                         <div>
-                            <input type="radio" id="typescript" name="language" value="typescript">
-                            <label for="typescript">Typescript</label>
+                            <input type = "radio" id = "typescript" name = "language" value = "typescript">
+                            <label for = "typescript">Typescript</label>
                         </div>
                         <div>
-                            <input type="radio" id="python" name="language" value="python">
-                            <label for="python">Python</label>
+                            <input type = "radio" id = "python" name = "language" value = "python">
+                            <label for = "python">Python</label>
                         </div>
                     </div>
                     <div class="column">
                         <div>
-                            <input type="radio" id="java" name="language" value="java">
-                            <label for="java">Java</label>
+                            <input type = "radio" id = "java" name = "language" value = "java">
+                            <label for = "java">Java</label>
                         </div>
                         <div>
-                            <input type="radio" id="c" name="language" value="c">
+                            <input type = "radio" id = "c" name = "language" value = "c">
                             <label for="c">C</label>
                         </div>
                         <div>
-                            <input type="radio" id="c++" name="language" value="c++">
-                            <label for="c++">C++</label>
+                            <input type = "radio" id = "c++" name = "language" value = "c++">
+                            <label for = "c++">C++</label>
                         </div>
                     </div>
                 </form>
