finished index.html

--- a/index.html
+++ b/index.html
@@ -3,19 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>RTE</title>
+    <link rel = "icon" href = "./images/logo.png">
     <link href = "index.css" rel = "stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id = "title-text">
-        <h1>RTE</h1>
-        <div id = "description">
-            <h2 id = "first">The best</h2>
-            <h2 id = "second">text editor</h2>
-            <h2 id = "third">on the market</h2>
+    <nav id = "navbar">
+        <div class = "nav-button">
+            <a href = "text-editor.html">Try it out!</a>
+        </div>
+        <div class = "nav-button">
+            <a href = "https://github.com/TheWomanZoe/CodingWithLewis-Hackaton">GitHub Source Code</a>
+        </div>
+    </nav>
+
+    <div id = "show-off">
+        <div id = "title-text">
+            <h1>RTE</h1>
+            <div id = "description">
+                <h2 id = "first">The best</h2>
+                <h2 id = "second">text editor</h2>
+                <h2 id = "third">on the market</h2>
+            </div>
+        </div>
+        <div id = "features">
+            <h2>So lightweight</h2>
+            <h2>So fast</h2>
+            <h2>So intelligent</h2>
         </div>
     </div>
+
+    <div id = "more-features">
+        <p>A text editor that understands you and your needs *</p>
+        <p>With code completion so good, it will blow you away *</p>
+        <p>With features that boost your productivity by 300% *</p>
+        <p>Six of the most loved languages supported</p>
+    </div>
+
+    <p>* I'm not claiming any of these things are true lol <br> It's just for marketing purposes</p>
 </body>
 </html>
