--- a/text-editor.html
+++ b/text-editor.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>RTE</title>
+    <link rel = "icon" href = "./images/logo.png">
     <link href = "text-editor.css" rel = "stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
